-- Package description for HGrib.

name:                hgrib
version:             0.1.0.0
synopsis:            Unofficial bindings for grib_api
description:
  Unofficial bindings to ECMWF's grib_api library for reading WMO
  FM-92 GRIB edition 1 and edition 2 messages.  No write support is
  currently implemented.
homepage:            https://github.com/mjakob/hgrib.git
license:             GPL-3
license-file:        LICENSE
author:              Mattias Jakobsson
maintainer:          mjakob422@gmail.com
copyright:           © 2015 Mattias Jakobsson
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

source-repository head
  type:      git
  location:  https://github.com/mjakob/hgrib.git
  branch:    develop

library
  exposed-modules:     Data.Grib
  other-modules:       Data.Grib.Internal
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.9
  default-language:    Haskell2010
  extra-libraries:     grib_api
